--- a/Lamode/Lamode.csproj
+++ b/Lamode/Lamode.csproj
@@ -335,6 +335,9 @@
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\ModelsArtist.cs" />
+    <Compile Include="Photo.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -416,6 +419,7 @@
     <Content Include="Views\Home\AdminOnly.cshtml" />
     <Content Include="Views\Home\VIPUser.cshtml" />
     <Content Include="Views\Home\SpecialUser.cshtml" />
+    <Content Include="Views\Home\AddImage.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
