--- a/Lamode/Lamode.csproj
+++ b/Lamode/Lamode.csproj
@@ -335,6 +335,7 @@
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\ModelsArtist.cs" />
+    <Compile Include="Models\Post.cs" />
     <Compile Include="Photo.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
