--- a/Lamode/packages.config
+++ b/Lamode/packages.config
@@ -5,6 +5,8 @@
   <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net461" />
   <package id="jQuery" version="3.1.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net461" />
+  <package id="Lucene.Net" version="3.0.3" targetFramework="net461" />
+  <package id="Lucene.Net.Contrib" version="3.0.3" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.1.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.1.0" targetFramework="net461" />
@@ -36,10 +38,5 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.3.0" targetFramework="net461" />
-  <package id="System.Net.Http" version="4.3.0" targetFramework="net461" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net461" />
-  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
-  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net461" />
 </packages>
