--- a/Lamode/Web.config
+++ b/Lamode/Web.config
@@ -9,9 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=lamode.database.windows.net;Initial Catalog=lamode;User ID=lamode;Password=FHp3003976" providerName="System.Data.SqlClient" />
-   
-  <add name="lamodeEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=lamode.database.windows.net;initial catalog=lamode;user id=lamode;password=FHp3003976;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=184.168.194.78;Initial Catalog=Lamode;User ID=Lamode;Password=Iloveyou1" providerName="System.Data.SqlClient" />
+  
+  
+  <add name="LamodeEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=184.168.194.78;initial catalog=Lamode;user id=Lamode;password=Iloveyou1;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
