--- a/Lamode/Lamode.csproj
+++ b/Lamode/Lamode.csproj
@@ -485,6 +485,7 @@
     <Content Include="scripts\jquery-3.1.1.slim.min.map" />
     <Content Include="scripts\jquery-3.1.1.min.map" />
     <Content Include="Views\Image\AddImage.cshtml" />
+    <Content Include="Views\Home\ConfirmEmail.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
