--- a/Lamode/Lamode.csproj
+++ b/Lamode/Lamode.csproj
@@ -399,6 +399,7 @@
     <Compile Include="Controllers\ImageController.cs" />
     <Compile Include="Controllers\LuceneController.cs" />
     <Compile Include="Controllers\MailController.cs" />
+    <Compile Include="Controllers\SearchController.cs" />
     <Compile Include="C__MigrationHistory.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -421,6 +422,7 @@
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\MailHelper.cs" />
+    <Compile Include="Repositiries\UserRepository.cs" />
     <Compile Include="ViewModels\Message.cs" />
     <Compile Include="Models\ModelsArtist.cs" />
     <Compile Include="Models\Post.cs" />
@@ -493,7 +495,6 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Home\SecureArea1.cshtml" />
     <Content Include="Views\Home\Login.cshtml" />
     <Content Include="Views\Home\BeforeRegister.cshtml" />
     <Content Include="Views\Home\Register.cshtml" />
@@ -510,6 +511,8 @@
     <Content Include="Views\Mail\Index.cshtml" />
     <Content Include="Views\Shared\_LayoutUser.cshtml" />
     <Content Include="Views\Home\SecureArea.cshtml" />
+    <Content Include="Views\Shared\_LayoutUserPartial.cshtml" />
+    <Content Include="Views\Search\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
