--- a/Lamode/Lamode.csproj
+++ b/Lamode/Lamode.csproj
@@ -302,6 +302,7 @@
     <Content Include="img\portfolio\thumbnails\1.jpg" />
     <Content Include="img\portfolio\thumbnails\4.jpg" />
     <Content Include="img\portfolio\thumbnails\5.jpg" />
+    <Content Include="img\userprofilepic.png" />
     <Content Include="js\bootstrap.min.js" />
     <Content Include="js\countryStateCity.js" />
     <Content Include="js\creative.js" />
